// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu align bottom-left 1`] = `
"<button icon=\\"\\" id=\\"__menu__1\\" align=\\"bottom-left\\" class=\\"mdl-button mdl-js-button mdl-button--icon\\" data-upgraded=\\",MaterialButton\\"><i class=\\"material-icons\\">more_vert</i></button>
<div class=\\"mdl-menu__container is-upgraded\\">
  <div class=\\"mdl-menu__outline\\"></div>
  <ul for=\\"__menu__1\\" class=\\"mdl-menu mdl-js-menu\\" data-upgraded=\\",MaterialMenu\\"></ul>
</div>"
`;

exports[`Menu align bottom-right 1`] = `
"<button icon=\\"\\" id=\\"__menu__1\\" align=\\"bottom-right\\" class=\\"mdl-button mdl-js-button mdl-button--icon\\" data-upgraded=\\",MaterialButton\\"><i class=\\"material-icons\\">more_vert</i></button>
<div class=\\"mdl-menu__container is-upgraded\\">
  <div class=\\"mdl-menu__outline mdl-menu--bottom-right\\"></div>
  <ul for=\\"__menu__1\\" class=\\"mdl-menu mdl-js-menu mdl-menu--bottom-right\\" data-upgraded=\\",MaterialMenu\\"></ul>
</div>"
`;

exports[`Menu align no option 1`] = `
"<button icon=\\"\\" id=\\"__menu__1\\" class=\\"mdl-button mdl-js-button mdl-button--icon\\" data-upgraded=\\",MaterialButton\\"><i class=\\"material-icons\\">more_vert</i></button>
<div class=\\"mdl-menu__container is-upgraded\\">
  <div class=\\"mdl-menu__outline\\"></div>
  <ul for=\\"__menu__1\\" class=\\"mdl-menu mdl-js-menu\\" data-upgraded=\\",MaterialMenu\\"></ul>
</div>"
`;

exports[`Menu align top-left 1`] = `
"<button icon=\\"\\" id=\\"__menu__1\\" align=\\"top-left\\" class=\\"mdl-button mdl-js-button mdl-button--icon\\" data-upgraded=\\",MaterialButton\\"><i class=\\"material-icons\\">more_vert</i></button>
<div class=\\"mdl-menu__container is-upgraded\\">
  <div class=\\"mdl-menu__outline mdl-menu--top-left\\"></div>
  <ul for=\\"__menu__1\\" class=\\"mdl-menu mdl-js-menu mdl-menu--top-left\\" data-upgraded=\\",MaterialMenu\\"></ul>
</div>"
`;

exports[`Menu align top-right 1`] = `
"<button icon=\\"\\" id=\\"__menu__1\\" align=\\"top-right\\" class=\\"mdl-button mdl-js-button mdl-button--icon\\" data-upgraded=\\",MaterialButton\\"><i class=\\"material-icons\\">more_vert</i></button>
<div class=\\"mdl-menu__container is-upgraded\\">
  <div class=\\"mdl-menu__outline mdl-menu--top-right\\"></div>
  <ul for=\\"__menu__1\\" class=\\"mdl-menu mdl-js-menu mdl-menu--top-right\\" data-upgraded=\\",MaterialMenu\\"></ul>
</div>"
`;

exports[`Menu children 1`] = `
"<button icon=\\"\\" id=\\"__menu__1\\" class=\\"mdl-button mdl-js-button mdl-button--icon\\" data-upgraded=\\",MaterialButton\\"><i class=\\"material-icons\\">more_vert</i></button>
<div class=\\"mdl-menu__container is-upgraded\\">
  <div class=\\"mdl-menu__outline\\"></div>
  <ul for=\\"__menu__1\\" class=\\"mdl-menu mdl-js-menu\\" data-upgraded=\\",MaterialMenu\\">
    <li class=\\"mdl-menu__item\\" tabindex=\\"-1\\">one
    </li>
    <li class=\\"mdl-menu__item\\" tabindex=\\"-1\\">two
    </li>
  </ul>
</div>"
`;

exports[`Menu disabled child 1`] = `
"<button icon=\\"\\" id=\\"__menu__1\\" class=\\"mdl-button mdl-js-button mdl-button--icon\\" data-upgraded=\\",MaterialButton\\"><i class=\\"material-icons\\">more_vert</i></button>
<div class=\\"mdl-menu__container is-upgraded\\">
  <div class=\\"mdl-menu__outline\\"></div>
  <ul for=\\"__menu__1\\" class=\\"mdl-menu mdl-js-menu\\" data-upgraded=\\",MaterialMenu\\">
    <li disabled class=\\"mdl-menu__item\\" tabindex=\\"-1\\">
      <div disabled></div>
    </li>
  </ul>
</div>"
`;

exports[`Menu icon 1`] = `
"<button icon=\\"add\\" id=\\"__menu__1\\" class=\\"mdl-button mdl-js-button mdl-button--icon\\" data-upgraded=\\",MaterialButton\\"><i class=\\"material-icons\\">add</i></button>
<div class=\\"mdl-menu__container is-upgraded\\">
  <div class=\\"mdl-menu__outline\\"></div>
  <ul for=\\"__menu__1\\" class=\\"mdl-menu mdl-js-menu\\" data-upgraded=\\",MaterialMenu\\"></ul>
</div>"
`;

exports[`Menu id 1`] = `
"<button icon=\\"\\" id=\\"__menu__id\\" class=\\"mdl-button mdl-js-button mdl-button--icon\\" data-upgraded=\\",MaterialButton\\"><i class=\\"material-icons\\">more_vert</i></button>
<div class=\\"mdl-menu__container is-upgraded\\">
  <div class=\\"mdl-menu__outline\\"></div>
  <ul for=\\"__menu__id\\" class=\\"mdl-menu mdl-js-menu\\" data-upgraded=\\",MaterialMenu\\"></ul>
</div>"
`;

exports[`Menu menu divider child 1`] = `
"<button icon=\\"\\" id=\\"__menu__1\\" class=\\"mdl-button mdl-js-button mdl-button--icon\\" data-upgraded=\\",MaterialButton\\"><i class=\\"material-icons\\">more_vert</i></button>
<div class=\\"mdl-menu__container is-upgraded\\">
  <div class=\\"mdl-menu__outline\\"></div>
  <ul for=\\"__menu__1\\" class=\\"mdl-menu mdl-js-menu\\" data-upgraded=\\",MaterialMenu\\">
    <li class=\\"mdl-menu__item mdl-menu__item--full-bleed-divider\\" tabindex=\\"-1\\">
      <div divider=\\"\\"></div>
    </li>
  </ul>
</div>"
`;

exports[`Menu no options 1`] = `
"<button icon=\\"\\" id=\\"__menu__1\\" class=\\"mdl-button mdl-js-button mdl-button--icon\\" data-upgraded=\\",MaterialButton\\"><i class=\\"material-icons\\">more_vert</i></button>
<div class=\\"mdl-menu__container is-upgraded\\">
  <div class=\\"mdl-menu__outline\\"></div>
  <ul for=\\"__menu__1\\" class=\\"mdl-menu mdl-js-menu\\" data-upgraded=\\",MaterialMenu\\"></ul>
</div>"
`;
